save patch related parameters

--- a/gen_patches.ipynb
+++ b/gen_patches.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
     "import random\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -31,30 +32,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Patch related parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "patch_sz = 96\n",
-    "step = 48\n",
-    "px_th = int(0.03 * patch_sz * patch_sz)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Dataset related parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,12 +56,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Patch related parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patch_sz = 96\n",
+    "step = 48\n",
+    "px_th = int(0.03 * patch_sz * patch_sz)\n",
+    "\n",
+    "patch_params = {\n",
+    "    'patch_sz': patch_sz,\n",
+    "    'step': step,\n",
+    "    'px_th': px_th\n",
+    "}\n",
+    "\n",
+    "with open(f'{dataset_proc}/patch_params.json', 'w+') as f:\n",
+    "    json.dump(patch_params, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Split input seismic images into patches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +146,20 @@
     "\n",
     "    padding, _ = get_sliding_wnd_params((XL, Z), patch_sz, step)\n",
     "\n",
-    "    for j in range(0, IL):        \n",
+    "    for j in range(0, IL):\n",
+    "        if j == 0:\n",
+    "            print(f'First inline section for {seismic_path}')\n",
+    "            plt.figure(figsize=(20, 16))\n",
+    "            plt.imshow(seismic[j], cmap='seismic')\n",
+    "            plt.xlabel('Crossline')\n",
+    "            plt.ylabel('Depth')\n",
+    "            plt.show()\n",
+    "        \n",
+    "        if stage == 'test':\n",
+    "            X.extend(seismic[j])\n",
+    "            Y.extend(fault[j])\n",
+    "            continue\n",
+    "\n",
     "        patches = get_sliding_wnd_patches(fault[j], padding, patch_sz, step)\n",
     "        t = (patches.sum((1, 2)) < px_th)\n",
     "        invalid_idx = list(compress(range(len(t)), t))\n",
@@ -145,15 +168,7 @@
     "\n",
     "        patches = get_sliding_wnd_patches(seismic[j], padding, patch_sz, step)\n",
     "        patches = np.delete(patches, invalid_idx, 0)\n",
-    "        X.extend(patches)\n",
-    "\n",
-    "        if j == 0:\n",
-    "            print(f'First inline section for {seismic_path}')\n",
-    "            plt.figure(figsize=(20, 16))\n",
-    "            plt.imshow(seismic[j], cmap='seismic')\n",
-    "            plt.xlabel('Crossline')\n",
-    "            plt.ylabel('Depth')\n",
-    "            plt.show()\n"
+    "        X.extend(patches)\n"
    ]
   },
   {
