add simple inference code

--- a/gen_patches.ipynb
+++ b/gen_patches.ipynb
@@ -21,7 +21,7 @@
     "%matplotlib inline\n",
     "\n",
     "from itertools import compress\n",
-    "from utils import (\n",
+    "from common.utils import (\n",
     "    normalize_seismic_data,\n",
     "    get_sliding_wnd_params,\n",
     "    get_sliding_wnd_patches\n",
